--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Calc</title>
+    <link rel="stylesheet" href="app/css/main.css">
 </head>
 <body>
+<main>
     <h1>Git commit initial</h1>
+    <div class="butttons_pannel">
+        <button class="button_description">1</button>
+        <button class="button_description">2</button>
+        <button class="button_description">3</button>
+        <br>
+        <button class="button_description">4</button>
+        <button class="button_description">5</button>
+        <button class="button_description">6</button>
+        <br>
+        <button class="button_description">7</button>
+        <button class="button_description">8</button>
+        <button class="button_description">9</button>
+    </div>
+</main>
 </body>
 </html>
